fixing BrandRepositoryTest